# OmniLearn

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: api.py
backend/app/api/endpoints/: knowledge_tree.py  lessons.py  questions.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/models/: base.py  knowledge_tree.py  lesson.py  question.py  user.py
backend/app/routers/: api.py  auth.py  knowledge_tree.py  lessons.py  questions.py  users.py
backend/app/schemas/: knowledge_tree.py  lesson.py  question.py  user.py
backend/app/services/: ai.py  auth.py  knowledge_tree.py  lesson.py  question.py  user.py
backend/app/services/oauth/: google.py
docs/: backend-rules.md  frontend-rules.md
frontend/: Dockerfile  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/login/: page.tsx
frontend/app/auth/register/: page.tsx
frontend/app/components/: AuthProvider.tsx  GoogleLoginButton.tsx  KnowledgeTreeForm.tsx  KnowledgeTreeView.tsx  LessonView.tsx  QuestionView.tsx
frontend/app/lib/: api.ts  google.ts
frontend/app/profile/: page.tsx
frontend/components/: KnowledgeTreeForm.tsx  KnowledgeTreeView.tsx  LessonView.tsx  QuestionView.tsx
frontend/lib/: api.ts
plans/: PRD.md
